# hdx-scraper-wfp-hungermap

./: README.md  hatch.toml  metric_dates.txt  pyproject.toml  requirements-test.txt  requirements.txt  run.py  test-requirements.txt  wfp.py
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml
config/: hdx_dataset_static.yaml  hdx_resource_view_static.yaml  project_configuration.yml
src/hdx/scraper/wfp/hungermap/: __main__.py  pipeline.py
src/hdx/scraper/wfp/hungermap/config/: hdx_dataset_static.yaml
tests/: conftest.py  test_wfp.py
tests/fixtures/: wfp-hungermap-data-for-afg-long.csv  wfp-hungermap-data-for-afg.csv
tests/fixtures/input/: afg-region-date-start-2023-05-13-date-end-2023-06-12.json  afg-region-date-start-2023-06-13-date-end-2023-07-12.json  afg-region-date-start-2023-07-13-date-end-2023-08-12.json  afg-region-date-start-2023-08-13-date-end-2023-09-12.json  afg-region-date-start-2023-09-13-date-end-2023-10-12.json  cod-region-date-start-2023-07-05-date-end-2023-08-04.json  cod-region-date-start-2023-08-05-date-end-2023-09-04.json  cod-region-date-start-2023-09-05-date-end-2023-10-04.json  cod-region-date-start-2023-10-05-date-end-2023-11-04.json  cod-region-date-start-2023-11-05-date-end-2023-12-04.json  foodsecurity-country-days-ago-0.json  foodsecurity-country-days-ago-1.json  foodsecurity-country-days-ago-2.json  foodsecurity-country-days-ago-3.json  foodsecurity-country-days-ago-4.json  foodsecurity-country.json
