#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-wfp-hungermap"
requires-python = ">=3.13"
dependencies = [
    "hdx-python-api>= 6.4.4",
    "hdx-python-country>= 3.9.4",
    "hdx-python-utilities>= 3.8.7",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-wfp-hungermap"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.wfp.hungermap.__main__:main"
